--- a/agents-docs/content/docs/visual-builder/headers.mdx
+++ b/agents-docs/content/docs/visual-builder/headers.mdx
@@ -1,28 +1,28 @@
 ---
-title: Request Context
-sidebarTitle: Request Context
+title: Headers
+sidebarTitle: Headers
 description: Pass dynamic context to your agents via HTTP headers for personalized interactions
 icon: LuBoxes
-keywords: request context, headers, context fetchers, prompt variables, personalization
+keywords: headers, context fetchers, prompt variables, personalization
 ---
 
 
 ## Overview
 
-Request context allows you to pass request-specific values (like user IDs, authentication tokens, or organization metadata) to your agent graph at runtime via HTTP headers. These values are validated and made available throughout your agent system for:
+Headers allow you to pass request-specific values (like user IDs, authentication tokens, or organization metadata) to your agent graph at runtime via HTTP headers. These values are validated and made available throughout your agent system for:
 
 - **Context Fetchers**: Dynamic data retrieval based on request values
 - **External Tools**: Authentication and personalization for API calls
 - **Agent Prompts**: Personalized responses using context variables
 
-## Configuring Request Context
+## Configuring Headers
 
 1. Go to the Graphs tab in the left sidebar. Then click on the graph you want to configure.
-2. On the right pane scroll down to the "Request context schema" section.
+2. On the right pane scroll down to the "Headers schema" section.
 3. Enter the schema in JSON Schema format.
 4. Click on the "Save" button.
 
-Here is an example of a valid request context schema:
+Here is an example of a valid headers schema:
 ```json
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
@@ -48,14 +48,14 @@ You can generate custom schemas using this [JSON Schema generator](https://trans
 3. Enter the custom headers in JSON format.
 4. Click on the "Apply" button.
 
-## Using Request Context in Your Agent Prompts
+## Using Headers in Your Agent Prompts
 
 1. Go to the Graphs tab in the left sidebar. Then click on the graph you want to configure.
 2. Either add a new agent or edit an existing agent by clicking on the agent you want to edit.
 3. On the right pane scroll down to the "Prompt" section.
-4. Use the double curly braces `{{}}` to reference the request context variables.
+4. Use the double curly braces `{{}}` to reference the headers variables.
 
 Here is an example of a valid prompt:
 ```text
-You are a helpful assistant for {{headers.userId}}!.
+You are a helpful assistant for {{headers.user_id}}!.
 ```
