--- a/agents-docs/content/docs/visual-builder/context-fetchers.mdx
+++ b/agents-docs/content/docs/visual-builder/context-fetchers.mdx
@@ -13,7 +13,7 @@ Context fetchers allow you to embed real-time data from external APIs into your 
 
 - **Dynamic data retrieval**: Fetch real-time data from APIs.
 - **Dynamic Prompting**: Use dynamic data in your agent prompts
-- **Headers integration**: Use headers-specific parameters to customize data fetching.
+- **Headers integration**: Use request-specific parameters to customize data fetching.
 - **Data transformation**: Transform API responses into the exact format your agent needs.
 
 ## Context Fetchers vs Tools
