--- a/agents-docs/content/docs/quick-start/traces.mdx
+++ b/agents-docs/content/docs/quick-start/traces.mdx
@@ -109,6 +109,8 @@ SIGNOZ_ADMIN_EMAIL=admin@example.com
 SIGNOZ_ADMIN_PASSWORD="adminADMIN#1"
 ```
 
+If you choose to use a different password, it must be at least 12 characters long and should contain at least one uppercase letter, one lowercase letter, one number, and one symbol.
+
 ### Step 3: Start SigNoz Services
 
 Run the following command to start SigNoz and related services:
