--- a/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
@@ -206,7 +206,7 @@ export default function Page() {
                   );
                 }
 
-                if (part.type.startsWith("data-")) {
+                if (part.type?.startsWith("data-")) {
                   return (
                     <div
                       key={partKey}
