--- a/agents-docs/content/docs/api-keys.mdx
+++ b/agents-docs/content/docs/api-keys.mdx
@@ -25,7 +25,7 @@ import { createApiKey } from '@inkeep/agents-core';
 
 const result = await createApiKey({
   tenantId: 'your-tenant-id',
-  graphId: 'your-graph-id',
+  agentId: 'your-graph-id',
   expiresAt: '2025-12-31T23:59:59Z', // Optional expiration
 });
 
