--- a/agents-docs/content/docs/community/contributing/overview.mdx
+++ b/agents-docs/content/docs/community/contributing/overview.mdx
@@ -65,7 +65,7 @@ Open `http://localhost:3000` in the browser and start building agents.
 
 # Push your project
 
-A key advantage of the Inkeep agent framework is its seamless code-to-visual workflow: define your agents programmatically, push them to the visual builder, and continue developing with the intuitive drag-and-drop interface.
+A key advantage of the Inkeep agent framework is its seamless code-to-visual workflow: define your agents programmatically, push them to the Visual Builder, and continue developing with the intuitive drag-and-drop interface.
 
 Follow the steps below to push your project using the [Inkeep CLI](/typescript-sdk/cli-reference).
 
@@ -88,7 +88,7 @@ inkeep push
   default. Feel free to change it to your own project.
 </Note>
 
-### Step 3: Observe the graph in the visual builder
+### Step 3: Observe the graph in the Visual Builder
 
 <img
   src="/gifs/basic-graph.gif"
