--- a/agents-docs/content/docs/quick-start/credentials.mdx
+++ b/agents-docs/content/docs/quick-start/credentials.mdx
@@ -35,7 +35,7 @@ inkeep dev
 
 ### Step 5: Start creating credentials
 
-In the visual builder, navigate to the Credentials page in the left sidebar and click "New Credential".
+In the Visual Builder, navigate to the Credentials page in the left sidebar and click "New Credential".
 
 Select "Bearer Authentication" and click "Create Credential". You'll then be prompted to enter your API key.
 
@@ -78,4 +78,4 @@ To get your Nango secret key:
    pnpm dev
    ```
 
-2. Create a new credential in the visual builder
+2. Create a new credential in the Visual Builder
