--- a/agents-docs/content/docs/quick-start/traces.mdx
+++ b/agents-docs/content/docs/quick-start/traces.mdx
@@ -208,6 +208,6 @@ For detailed analysis and further debugging:
 
 For more detailed information on using traces, see the [SigNoz Usage guide](/typescript-sdk/signoz-usage).
 
-## Additional Observability: Langfuse Integration
+## Additional Observability and Evals
 
-👉 **If you want to connect to Langfuse** for specialized LLM observability alongside SigNoz see the [Langfuse Usage guide](/typescript-sdk/langfuse-usage) for complete setup instructions.
+👉 For additional observability or a dedicated Evals platform, you can connect to any OTEL-based provider. For example, check out the [Langfuse Usage guide](/typescript-sdk/langfuse-usage) for end-to-end instructions.
