--- a/agents-docs/content/docs/self-hosting/docker.mdx
+++ b/agents-docs/content/docs/self-hosting/docker.mdx
@@ -1,5 +1,5 @@
 ---
-title: Docker
+title: Deploy to Docker
 description: Deploy the Inkeep Agent Framework using Docker
 icon: "brand/DockerIcon"
 ---
