--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -1,5 +1,5 @@
 ---
-title: Vercel
+title: Deploy to Vercel
 description: Deploy the Inkeep Agent Framework to Vercel
 icon: "brand/VercelIcon"
 ---
