--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -19,18 +19,17 @@ Agents can also be used for **agentic workflows** like:
 - Updating CRMs, filling out RFPs, etc.
 - Automating back-office tasks for operations teams
 
-
 ## Inkeep Open Source
 
 Inkeep **Open Source** (this docs site) includes:
 - A Visual Builder & TypeScript SDK with 2-way sync
 - Multi-Agent Architecture to support Teams of Agents
 - MCP Tools with Credential Management
-- A Chat UI Component Library
-- APIs to trigger Agents with MCP, A2A, & Vercel SDK formats
+- A UI Component Library for dynamic AI chat experiences
+- Triggering Agents with MCP, A2A, & Vercel SDK APIs
 - Observability via Traces UI & OpenTelemetry
 
-For unified search & RAG and integration with Slack and support platforms, learn about [Inkeep Cloud](https://inkeep.com/get-started).
+For unified search (managed RAG) and integration with Slack and support platforms, learn about [Inkeep Cloud](https://inkeep.com/get-started).
 
 ## Two ways to build Agents
 
@@ -45,7 +44,7 @@ A no-code interface designed to let both technical and non-technical teams creat
   style={{ borderRadius: "10px" }}
 />
 
-### TypeScript TypeScript SDK
+### TypeScript SDK
 
 A code-first approach for building and managing agents, allowing you to build complex multi-agent systems and workflows with the tools your engineering team expects.
 
