--- a/agents-docs/content/docs/typescript-sdk/data-operations.mdx
+++ b/agents-docs/content/docs/typescript-sdk/data-operations.mdx
@@ -155,7 +155,7 @@ Emitted when control is transferred from one agent to another.
       "timestamp": 1726247200000,
       "agentId": "search-agent",
       "data": {
-        "fromAgent": "search-agent",
+        "fromSubAgent": "search-agent",
         "targetAgent": "analysis-agent",
         "reason": "Specialized analysis required",
         "context": {
@@ -182,7 +182,7 @@ Emitted when an agent delegates a task to another agent.
       "agentId": "coordinator-agent",
       "data": {
         "delegationId": "deleg_xyz789",
-        "fromAgent": "coordinator-agent",
+        "fromSubAgent": "coordinator-agent",
         "targetAgent": "search-agent",
         "taskDescription": "Search for information about machine learning",
         "context": {
@@ -209,7 +209,7 @@ Emitted when a delegated task is completed and returned.
       "agentId": "search-agent",
       "data": {
         "delegationId": "deleg_xyz789",
-        "fromAgent": "search-agent",
+        "fromSubAgent": "search-agent",
         "targetAgent": "coordinator-agent",
         "result": {
           "status": "completed",
